--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   dio: ^2.0.7
+  flutter_staggered_grid_view: "^0.2.7"
 
 dev_dependencies:
   flutter_test:
