--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   english_words: ^3.1.0
   dio: ^2.0.7
   flutter_staggered_grid_view: "^0.2.7"
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
