--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,10 +29,12 @@ dependencies:
   dio: ^2.0.7
   flutter_staggered_grid_view: "^0.2.7"
   path_provider: ^0.4.1
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: ^0.17.2
 
 
 # For information on the generic Dart part of this file, see the
