--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,16 @@ dependencies:
   flutter_staggered_grid_view: "^0.2.7"
   path_provider: ^0.4.1
   intl: ^0.15.7
+  json_annotation: ^2.0.0
+  shared_preferences: ^0.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: ^0.17.2
+  build_runner: ^1.0.0
+  json_model: ^0.0.0
+  json_serializable: ^2.0.0
 
 
 # For information on the generic Dart part of this file, see the
