--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: ^0.15.7
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.0
+  provider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
